[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-lasso"
version = "0.1.0"
description = "Adaptive LASSO for linear regression with a Statsmodels-like API."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Aaron Horvitz" },
]
dependencies = [
  "numpy>=1.26",
  "statsmodels>=0.14.6",
]
keywords = ["adaptive lasso", "lasso", "regression", "statsmodels", "variable selection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "nbclient>=0.10",
  "nbconvert>=7.16",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
